# cdi-test

./: CMakeLists.txt  constants.hpp  isolated.cpp  plot.plt  test.cpp
cdi/: constants.hpp  main.cpp
image/: make_transobj.py  transobj.txt
knifeedge/: constants.hpp  main.cpp  result_images.plt
pie/: constants.hpp  main.cpp  make_plot_plt.sh
ptychography/: constants.hpp  main.cpp  plot.plt  problem.cpp  solve.cpp
rpie/: constants.hpp  main.cpp  plot.plt
test/: main.cpp
